<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_details"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.fady.bakingapp.Fragment.DetailsActivityFragment">

    <android.support.v7.widget.RecyclerView
        android:id="@+id/details_Recycler"
        android:layout_width="match_parent"
        android:dividerHeight="4dp"
        android:layout_height="match_parent"></android.support.v7.widget.RecyclerView>
</RelativeLayout>
