...
            android:background="@drawable/button_background"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:text="Previous Step" />

        <Button
            android:id="@+id/nextStep"
            android:layout_width="wrap_content"

            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_marginRight="10dp"
            android:background="@drawable/button_background"
...
